kuttl-tests/tests/basic-gateway/01-gatewayclass.yaml
# GatewayClass is now created by Terraform
# See terraform/kubernetes.tf for the envoy-gateway-class definition
