kuttl-tests/tests/basic-gateway/00-assert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-test
status:
  phase: Active
