kuttl-tests/tests/basic-gateway/01-assert.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: example-gateway-class
