kuttl-tests/tests/basic-gateway/02-assert.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: gateway-api-test
