kuttl-tests/tests/basic-gateway/03-assert.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  namespace: gateway-api-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  namespace: gateway-api-test
status:
  availableReplicas: 2
  readyReplicas: 2
  replicas: 2
