kuttl-tests/tests/basic-gateway/04-assert.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: gateway-api-test
